<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AxisConfig" Id="{e00fe310-8ff8-452a-800a-823efa83b1a3}">
    <Declaration><![CDATA[(*These are axis parameters that are set up during commissioning and
in theory don't neeed to be change as part of daily moving of axes.
For instance they may be changed due to poor parameter selection
or change of instrument configuration.*)
TYPE ST_AxisConfig :
STRUCT
    //Axis Parameters
    fOverride: LREAL := 100; //Controller override (%). Acts as a global velocity scaling factor for the axis. Default: 100%
    fHomePosition: LREAL := 0; //Position to set the axis to after completing the homing sequence
    fHomeFinishDistance: LREAL := 0; //Distance to move back into the working zone after homing is complete
    eHomeSeq: E_HomingRoutines; //Homing sequence routine to execute
    eRestorePosition: E_RestorePosition; //Option to restore incremental axis position after power loss(0 = No, 1 = Yes)
    bEnableStopWithAnyLimitSwitch :BOOL := TRUE; //Option to stop the axis when either the forward or backward limit switch is triggered

    //Advanced homing parameters
    stHomingConfig: ST_HomingConfig; //Configuration for advanced homing routines

    //Backlash compensation config
    stBacklashConfig: ST_BacklashConfig; //Settings for managing backlash compensation

    // CoE
    stCoEParameters : ST_AxisCoE;

    //Temperature disable configuration
    bEnableTemperatureDisable: BOOL := FALSE; //Enable axis disabling due to high temperature
    fMaxTemperature: LREAL := 0.0; //Maximum temperature allowed before disabling
    fTempScalingFactor: REAL := 10.0; //Scaling factor for temperature readings
    tPermitTimeout: Time := T#2s;

    //Read and Write parameters
    eAxisParameters: E_AxisParameters; //Enumeration of axis parameters for read/write operations
    fWriteAxisParameter: LREAL; //Value to write to the selected axis parameter
    fReadAxisParameter: LREAL; //Current value of the selected axis parameter

    //Multi-master axis parameters
    astMultiMasterAxis: ARRAY [1..4] OF ST_GearAxis; //Master axes for multi-master configuration
    astMultiMasterAxisLatched: ARRAY [1..4] OF ST_GearAxis; //A kind of readback since one doesn't exist in AXIS_REF
    afMultiSlaveAxisRatio: ARRAY [1..GVL_APP.nAXIS_NUM] OF LREAL; //Slave axis ratios for multi-master setup

    // Read only MC parameters
    bReadMcParametersValid: BOOL:= FALSE; //Indicates validity of MC parameter readings
    bReadMcParametersError: BOOL:= FALSE; //Indicates error in MC parameter readings
    fVelocityDefaultSlow: LREAL; //Read only - AxisManualVelocitySlow
    fVelocityDefaultFast: LREAL; //Read only - AxisManualVelocityFast
    fHomingVelToCam: LREAL; //Read only - AxisVelocityToCam
    fHomingVelFromCam: LREAL; //Read only - AxisVelocityFromCam
    fVeloMax: LREAL; //Read only - AxisMaxVelocity
    fMaxAcc: LREAL; //Read only - AxisMaximumAcceleration
    fMaxDec: LREAL; //Read only - AxisMaximumDeceleration
    fDefaultAcc: LREAL; //Read only - AxisDefaultAcceleration
    fDefaultDec: LREAL; //Read only - AxisDefaultDeceleration
    bEnMinSoftPosLimit: BOOL; //Read only - EnableLimitForward
    fMinSoftPosLimit: LREAL; //Read only - SWLimitForward
    bEnMaxSoftPosLimit: BOOL; //Read only - EnableLimitBackward
    fMaxSoftPosLimit: LREAL; //Read only - SWLimitBackward
    bEnPositionLagMonitoring: BOOL; //Read only - EnablePositionLagMonitoring
    fMaxPosLagValue: LREAL; //Read only - MaxPositionLag
    bEnTargetPositionMonitoring: BOOL; //Read only - AxisEnTargetPositionMonitoring
    fTargetPositionWindow: LREAL; //Read only - AxisTargetPositionWindow
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>