<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AxisError" Id="{4d23f353-6484-09b3-1cf9-9d08ea568830}">
    <Declaration><![CDATA[TYPE ST_AxisError:
STRUCT
//PLCopen function block errors
    nPowerErrorID: UDINT; //Error ID MC_Power function block
    nMoveAbsoluteErrorID: UDINT; //Error ID for MC_MoveAbsolute function block
    nMoveRelativeErrorID: UDINT; //Error ID for MC_MoveRelative function block
    nMoveVelocityErrorID: UDINT; //Error ID for MC_MoveVelocity function block
    nMoveModuloErrorID: UDINT; //Error ID for MC_MoveModulo function block
    nHomeErrorID: UDINT; //Error ID for MC_Home function block
    nHaltErrorID: UDINT; //Error ID for MC_Halt function block
    nResetErrorID: UDINT; //Error ID for MC_Reset function block
    nStopErrorID: UDINT;//Error ID for MC_Stop function block
    nGearInMultiMasterErrorID: UDINT; //Error ID for MC_GearInMultiMaster function block
    nGearOutErrorID: UDINT; //Error ID for MC_GearOut function block
    nWriteParameterErrorId: UDINT; //Error ID for writing parameters function block
    nReadParameterErrorId: UDINT; //Error ID for MC_ReadParameter function block
    nBacklashErrorID: UDINT; //Error ID for MC_BacklashCompensation function block
//Error from the NC
    nNCErrorID : UDINT; //Error ID from the NC Axis_Ref Axis Status
    nPermitErrorID : UDINT; //Error because of missing Permit(brake, airpads, ...)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>