<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AxisStruct" Id="{6c14041a-788b-0323-3269-f960cad54348}">
    <Declaration><![CDATA[TYPE ST_AxisStruct :
STRUCT
    stControl: ST_AxisControl;
    stStatus: ST_AxisStatus;
    stConfig: ST_AxisConfig;
    stError: ST_AxisError;
    stInputs: ST_AxisInputs;
    stDescription: ST_AxisDescription;
    //The NC axis link to the hardware that is controlling
    Axis: AXIS_REF;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>